src/parser/PmmParser.java
// Generated from C:/Users/ignac/Desktop/Uni/20-21/DLP/PL/DLP-Lenguaje/src/parser\Pmm.g4 by ANTLR 4.9.1
package parser;

    import ast.*;
    import java.util.*;
    import java.lang.Integer;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, IGNORAR=38, 
		INT_CONSTANT=39, REAL_CONSTANT=40, CHAR_CONSTANT=41, VAR=42;
	public static final int
		RULE_program = 0, RULE_definicion_var = 1, RULE_definicion_func = 2, RULE_definicion_main = 3, 
		RULE_type_simple = 4, RULE_type = 5, RULE_sentencia = 6, RULE_expresion = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definicion_var", "definicion_func", "definicion_main", "type_simple", 
			"type", "sentencia", "expresion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "':'", "';'", "'def'", "'('", "')'", "'{'", "'}'", "'main'", 
			"'int'", "'double'", "'char'", "'struct'", "'['", "']'", "'='", "'if'", 
			"'else'", "'while'", "'print'", "'input'", "'return'", "'.'", "'-'", 
			"'!'", "'*'", "'/'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", 
			"'=='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "IGNORAR", "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", 
			"VAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public Definicion_varContext definicion_var;
		public Definicion_funcContext definicion_func;
		public Definicion_mainContext main;
		public Definicion_mainContext definicion_main() {
			return getRuleContext(Definicion_mainContext.class,0);
		}
		public List<Definicion_varContext> definicion_var() {
			return getRuleContexts(Definicion_varContext.class);
		}
		public Definicion_varContext definicion_var(int i) {
			return getRuleContext(Definicion_varContext.class,i);
		}
		public List<Definicion_funcContext> definicion_func() {
			return getRuleContexts(Definicion_funcContext.class);
		}
		public Definicion_funcContext definicion_func(int i) {
			return getRuleContext(Definicion_funcContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{

			                 List<Definition> definiciones = new ArrayList<Definition>();
			                
			setState(25);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(23);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case VAR:
						{
						setState(17);
						((ProgramContext)_localctx).definicion_var = definicion_var();
						 definiciones.addAll(((ProgramContext)_localctx).definicion_var.ast); 
						}
						break;
					case T__3:
						{
						setState(20);
						((ProgramContext)_localctx).definicion_func = definicion_func();
						 definiciones.add(((ProgramContext)_localctx).definicion_func.ast); 
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(27);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(28);
			((ProgramContext)_localctx).main = definicion_main();

			                definiciones.add(((ProgramContext)_localctx).main.ast);
			                ((ProgramContext)_localctx).ast =  new Program((((ProgramContext)_localctx).main!=null?(((ProgramContext)_localctx).main.start):null).getLine(), (((ProgramContext)_localctx).main!=null?(((ProgramContext)_localctx).main.start):null).getCharPositionInLine() + 1, definiciones);
			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definicion_varContext extends ParserRuleContext {
		public List<VarDefinition> ast;
		public Token var1;
		public Token var2;
		public TypeContext type;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> VAR() { return getTokens(PmmParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(PmmParser.VAR, i);
		}
		public Definicion_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterDefinicion_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitDefinicion_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitDefinicion_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Definicion_varContext definicion_var() throws RecognitionException {
		Definicion_varContext _localctx = new Definicion_varContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definicion_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			                List<String> nombres = new ArrayList<String>();
			                List<VarDefinition> variables = new ArrayList<VarDefinition>();
			                
			setState(32);
			((Definicion_varContext)_localctx).var1 = match(VAR);
			 nombres.add((((Definicion_varContext)_localctx).var1!=null?((Definicion_varContext)_localctx).var1.getText():null)); 
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(34);
				match(T__0);
				setState(35);
				((Definicion_varContext)_localctx).var2 = match(VAR);
				 nombres.add((((Definicion_varContext)_localctx).var2!=null?((Definicion_varContext)_localctx).var2.getText():null)); 
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(42);
			match(T__1);
			setState(43);
			((Definicion_varContext)_localctx).type = type();
			setState(44);
			match(T__2);

			                for(String s : nombres)
			                    variables.add(new VarDefinition(((Definicion_varContext)_localctx).var1.getLine(), ((Definicion_varContext)_localctx).var1.getCharPositionInLine() + 1, ((Definicion_varContext)_localctx).type.ast, s));

			                ((Definicion_varContext)_localctx).ast =  variables;
			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definicion_funcContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Token nombre;
		public Token var1;
		public Type_simpleContext ty1;
		public Token var2;
		public Type_simpleContext ty2;
		public Type_simpleContext ty3;
		public Definicion_varContext definicion_var;
		public SentenciaContext sentencia;
		public List<TerminalNode> VAR() { return getTokens(PmmParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(PmmParser.VAR, i);
		}
		public List<Definicion_varContext> definicion_var() {
			return getRuleContexts(Definicion_varContext.class);
		}
		public Definicion_varContext definicion_var(int i) {
			return getRuleContext(Definicion_varContext.class,i);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public List<Type_simpleContext> type_simple() {
			return getRuleContexts(Type_simpleContext.class);
		}
		public Type_simpleContext type_simple(int i) {
			return getRuleContext(Type_simpleContext.class,i);
		}
		public Definicion_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterDefinicion_func(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitDefinicion_func(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitDefinicion_func(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Definicion_funcContext definicion_func() throws RecognitionException {
		Definicion_funcContext _localctx = new Definicion_funcContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definicion_func);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{

			                List<VarDefinition> parametros = new ArrayList<VarDefinition>();
			                List<VarDefinition> variables = new ArrayList<VarDefinition>();
			                List<Statement> sentencias = new ArrayList<Statement>();
			                FunctionType tipoFuncion = null;
			                
			setState(48);
			match(T__3);
			setState(49);
			((Definicion_funcContext)_localctx).nombre = match(VAR);
			setState(50);
			match(T__4);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(51);
				((Definicion_funcContext)_localctx).var1 = match(VAR);
				setState(52);
				match(T__1);
				setState(53);
				((Definicion_funcContext)_localctx).ty1 = type_simple();
				 parametros.add(new VarDefinition(((Definicion_funcContext)_localctx).var1.getLine(), ((Definicion_funcContext)_localctx).var1.getCharPositionInLine() + 1, ((Definicion_funcContext)_localctx).ty1.ast, (((Definicion_funcContext)_localctx).var1!=null?((Definicion_funcContext)_localctx).var1.getText():null))); 
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(55);
					match(T__0);
					setState(56);
					((Definicion_funcContext)_localctx).var2 = match(VAR);
					setState(57);
					match(T__1);
					setState(58);
					((Definicion_funcContext)_localctx).ty2 = type_simple();
					 parametros.add(new VarDefinition(((Definicion_funcContext)_localctx).var2.getLine(), ((Definicion_funcContext)_localctx).var2.getCharPositionInLine() + 1, ((Definicion_funcContext)_localctx).ty2.ast, (((Definicion_funcContext)_localctx).var2!=null?((Definicion_funcContext)_localctx).var2.getText():null))); 
					}
					}
					setState(65);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(68);
			match(T__5);
			setState(69);
			match(T__1);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11))) != 0)) {
				{
				setState(70);
				((Definicion_funcContext)_localctx).ty3 = type_simple();
				 tipoFuncion = new FunctionType(((Definicion_funcContext)_localctx).nombre.getLine(), ((Definicion_funcContext)_localctx).nombre.getCharPositionInLine() + 1, ((Definicion_funcContext)_localctx).ty3.ast, parametros); 
				}
			}

			setState(75);
			match(T__6);
			setState(81);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(76);
					((Definicion_funcContext)_localctx).definicion_var = definicion_var();
					 variables.addAll(((Definicion_funcContext)_localctx).definicion_var.ast); 
					}
					} 
				}
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__16) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__23) | (1L << T__24) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << VAR))) != 0)) {
				{
				{
				setState(84);
				((Definicion_funcContext)_localctx).sentencia = sentencia();
				 sentencias.add(((Definicion_funcContext)_localctx).sentencia.ast); 
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(T__7);

			                if(tipoFuncion != null)
			                    ((Definicion_funcContext)_localctx).ast =  new FuncDefinition(((Definicion_funcContext)_localctx).nombre.getLine(), ((Definicion_funcContext)_localctx).nombre.getCharPositionInLine() + 1, (((Definicion_funcContext)_localctx).nombre!=null?((Definicion_funcContext)_localctx).nombre.getText():null), tipoFuncion, variables, sentencias);
			                else {
			                    tipoFuncion = new FunctionType(((Definicion_funcContext)_localctx).nombre.getLine(), ((Definicion_funcContext)_localctx).nombre.getCharPositionInLine() + 1, ast.Void.getInstance(), parametros);
			                    ((Definicion_funcContext)_localctx).ast =  new FuncDefinition(((Definicion_funcContext)_localctx).nombre.getLine(), ((Definicion_funcContext)_localctx).nombre.getCharPositionInLine() + 1, (((Definicion_funcContext)_localctx).nombre!=null?((Definicion_funcContext)_localctx).nombre.getText():null), tipoFuncion, variables, sentencias);
			                }
			                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definicion_mainContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Token def1;
		public Definicion_varContext definicion_var;
		public SentenciaContext sentencia;
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public List<Definicion_varContext> definicion_var() {
			return getRuleContexts(Definicion_varContext.class);
		}
		public Definicion_varContext definicion_var(int i) {
			return getRuleContext(Definicion_varContext.class,i);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public Definicion_mainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterDefinicion_main(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitDefinicion_main(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitDefinicion_main(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Definicion_mainContext definicion_main() throws RecognitionException {
		Definicion_mainContext _localctx = new Definicion_mainContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definicion_main);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{

			                List<VarDefinition> variables = new ArrayList<VarDefinition>();
			                List<Statement> sentencias = new ArrayList<Statement>();
			                List<VarDefinition> parametros = new ArrayList<VarDefinition>();
			                
			setState(96);
			((Definicion_mainContext)_localctx).def1 = match(T__3);
			setState(97);
			match(T__8);
			setState(98);
			match(T__4);
			setState(99);
			match(T__5);
			setState(100);
			match(T__1);
			setState(101);
			match(T__6);
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(102);
					((Definicion_mainContext)_localctx).definicion_var = definicion_var();
					 variables.addAll(((Definicion_mainContext)_localctx).definicion_var.ast); 
					}
					} 
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__16) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__23) | (1L << T__24) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT) | (1L << VAR))) != 0)) {
				{
				{
				setState(110);
				((Definicion_mainContext)_localctx).sentencia = sentencia();
				 sentencias.add(((Definicion_mainContext)_localctx).sentencia.ast); 
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(T__7);
			setState(119);
			match(EOF);
			 ((Definicion_mainContext)_localctx).ast =  new FuncDefinition(((Definicion_mainContext)_localctx).def1.getLine(), ((Definicion_mainContext)_localctx).def1.getCharPositionInLine() + 1, "main", new FunctionType(((Definicion_mainContext)_localctx).def1.getLine(), ((Definicion_mainContext)_localctx).def1.getCharPositionInLine() + 1, ast.Void.getInstance(), parametros), variables, sentencias); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_simpleContext extends ParserRuleContext {
		public Type ast;
		public Type_simpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_simple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterType_simple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitType_simple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitType_simple(this);
			else return visitor.visitChildren(this);
		}
	}
